Spacing bug in SectionViewHeader

--- a/public/bootstrap/less/trp2.less
+++ b/public/bootstrap/less/trp2.less
@@ -530,6 +530,7 @@ h1 {
   padding-bottom: 16px;
   padding-top: 15px;
   padding-right: 20px;
+  height: 30px;
 }
 
 .trpItemSorter {
